logs/6216167.out
==========================================
SLURM_JOB_ID = 6216167
SLURM_JOB_NODELIST = d05-11
TMPDIR = /tmp/SLURM_6216167
==========================================
  File "source/pprabhu_driver.py", line 89
    "lr": tune.loguniform(1e-5, 1e-3),
    ^
SyntaxError: invalid syntax
